Fix to pass Checkstyle test